--- a/picture.qrc
+++ b/picture.qrc
@@ -11,5 +11,6 @@
         <file>512.png</file>
         <file>1024.png</file>
         <file>2048.png</file>
+        <file>0.png</file>
     </qresource>
 </RCC>
