--- a/game.ui
+++ b/game.ui
@@ -56,44 +56,6 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>15</y>
-      <width>75</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Victorian LET</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>restart</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>50</y>
-      <width>75</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Victorian LET</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>exit</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="pic_0">
     <property name="geometry">
      <rect>
@@ -121,7 +83,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLCDNumber" name="lcdNumber">
+   <widget class="QLCDNumber" name="lcdnumber">
     <property name="geometry">
      <rect>
       <x>370</x>
@@ -486,7 +448,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>340</y>
+      <y>370</y>
       <width>80</width>
       <height>80</height>
      </rect>
@@ -534,6 +496,44 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>15</y>
+      <width>75</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Victorian LET</family>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>restart</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>50</y>
+      <width>75</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Victorian LET</family>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>exit</string>
     </property>
    </widget>
   </widget>
